--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .3)), url(images/1.png.webp) center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .3)), url(images/1.webp) center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
